--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,1 +1,20 @@
-<p>recipe-list works!</p>
+<div class="row">
+    <div class="col-xs-12">
+        <button class="btn btn-success">New Recipe</button>
+    </div>
+</div>
+<hr/>
+<div class="row">
+    <div class="col-xs-12 list-group">
+        <a href="#" class="list-group-item list-group-item-action d-flex justify-content-between" *ngFor="let recipe of recipes">
+            <div class="pull-left">
+                <h4 class="list-group-item-text">{{recipe.name}}</h4>
+                <p class="list-group-item-text">{{recipe.description}}</p>
+            </div>
+            <span class="pull-right">
+                <img src={{recipe.imagePath}} alt={{recipe.name}} class="img-responsive rounded-4" style="max-height: 100px;">
+            </span>
+        </a>
+        <app-recipe-item></app-recipe-item>
+    </div>
+</div>
