add navigation to header links

--- a/src/app/header/app.header.html
+++ b/src/app/header/app.header.html
@@ -6,10 +6,10 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav d-flex">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Recipes</a>
+          <a class="nav-link" id="recipes" href="#" (click)="onSelectFeature('recipe')">Recipes</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">app-shopping List</a>
+          <a class="nav-link" id="shopping-list" href="#" (click)="onSelectFeature('shopping-list')">app-shopping List</a>
         </li>
         <li class="nav-item dropdown justify-self-end">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
