--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -3,11 +3,11 @@
         <form>
             <div class="row">
                 <div class="col-sm-5 form-group">
-                    <label for="name">Name</label>
+                    <label for="name" class="fw-bold">Name</label>
                     <input type="text" id="name" class="form-control">
                 </div>
                 <div class="col-sm-2 form-group">
-                    <label for="amount">Amount</label>
+                    <label for="amount" class="fw-bold">Amount</label>
                     <input type="number" id="amount" class="form-control">
                 </div>
             </div>
