--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -6,15 +6,6 @@
 <hr/>
 <div class="row">
     <div class="col-xs-12 list-group">
-        <a href="#" class="list-group-item list-group-item-action d-flex justify-content-between" *ngFor="let recipe of recipes">
-            <div class="pull-left">
-                <h4 class="list-group-item-text">{{recipe.name}}</h4>
-                <p class="list-group-item-text">{{recipe.description}}</p>
-            </div>
-            <span class="pull-right">
-                <img src={{recipe.imagePath}} alt={{recipe.name}} class="img-responsive rounded-4" style="max-height: 100px;">
-            </span>
-        </a>
-        <app-recipe-item></app-recipe-item>
+        <app-recipe-item  *ngFor="let recipe of recipes" [recipe-item]="recipe"></app-recipe-item>
     </div>
 </div>
