--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -11,8 +11,8 @@
 <div class="row">
     <div class="col-xs-12">
         <div class="btn-group">
-            <button class="btn btn-primary dropdown-toggle">Manage Recipe <span class="caret"></span></button>
-            <ul class="dropdown-menu">
+            <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Manage Recipe <span class="caret"></span></button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                 <li><a href="#">To Shopping List</a></li>
                 <li><a href="#">Edit Recipe</a></li>
                 <li><a href="#">Delete Recipe</a></li>
