--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -6,6 +6,6 @@
 <hr/>
 <div class="row">
     <div class="col-xs-12 list-group">
-        <app-recipe-item  *ngFor="let recipe of recipes" [recipe-item]="recipe" (recipeSelected)="recipeJustSelected(recipe)"></app-recipe-item>
+        <app-recipe-item  *ngFor="let recipe of recipes" [recipe-item]="recipe"></app-recipe-item>
     </div>
 </div>
