--- a/src/app/header/app.header.html
+++ b/src/app/header/app.header.html
@@ -5,22 +5,21 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav d-flex">
-        <li class="nav-item active">
-          <a class="nav-link" id="recipes" href="#" (click)="onSelectFeature('recipe')">Recipes</a>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" id="recipes" routerLink="/recipes">Recipes</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" id="shopping-list" href="#" (click)="onSelectFeature('shopping-list')">app-shopping List</a>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" id="shopping-list" routerLink="/shopping-list">app-shopping List</a>
         </li>
         <li class="nav-item dropdown justify-self-end">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Manage
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="#">Save Data</a>
-            <a class="dropdown-item" href="#">Fetch Data</a>
+            <a class="dropdown-item" style="cursor:pointer;">Save Data</a>
+            <a class="dropdown-item" style="cursor:pointer;">Fetch Data</a>
           </div>
         </li>
       </ul>
     </div>
   </nav>
-  
