--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,4 +1,4 @@
-<a href="#" class="list-group-item list-group-item-action d-flex justify-content-between" (click)="onSelected()">
+<a class="recipe-item list-group-item list-group-item-action d-flex justify-content-between" (click)="onSelected()">
     <div class="pull-left">
         <h4 class="list-group-item-text">{{recipeItem.name}}</h4>
         <p class="list-group-item-text">{{recipeItem.description}}</p>
