--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,32 +1,36 @@
 <div class="row">
-    <div class="col-xs-12">
-        <img src="{{recipe.imagePath}}" alt="" class="img-responsive" style="max-height: 200px;">
-    </div>
+  <div class="col-xs-12">
+    <img src="{{recipe.imagePath}}" alt="" class="img-responsive" style="max-height: 200px;">
+  </div>
 </div>
 <div class="row">
-    <div class="col-xs-12">
-        <h2>{{recipe.name}}</h2>
-    </div>
+  <div class="col-xs-12">
+    <h2>{{recipe.name}}</h2>
+  </div>
 </div>
 <div class="row">
-    <div class="col-xs-12">
-        <div class="btn-group">
-            <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Manage Recipe <span class="caret"></span></button>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <li><a class="dropdown-item">To Shopping List</a></li>
-                <li><a class="dropdown-item">Edit Recipe</a></li>
-                <li><a class="dropdown-item">Delete Recipe</a></li>
-            </ul>
-        </div>
+  <div class="col-xs-12">
+    <div class="btn-group">
+      <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Manage Recipe <span class="caret"></span></button>
+      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+        <li><a class="dropdown-item" (click)="onAddToShoppingList()" style="cursor:pointer;">To Shopping List</a></li>
+        <li><a class="dropdown-item">Edit Recipe</a></li>
+        <li><a class="dropdown-item">Delete Recipe</a></li>
+      </ul>
     </div>
+  </div>
 </div>
 <div class="row">
-    <div class="col-xs-12">
-        {{recipe.description}}
-    </div>
+  <div class="col-xs-12">
+    {{recipe.description}}
+  </div>
 </div>
 <div class="row">
-    <div class="col-xs-12">
-        Ingredients
-    </div>
+  <div class="col-xs-12">
+    <ul class="list-group">
+      <li class="list-group-item" *ngFor="let ingredient of recipe.ingredients">
+        {{ingredient.name}} - {{ingredient.amount}}
+      </li>
+    </ul>
+  </div>
 </div>
