--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -4,16 +4,16 @@
             <div class="row">
                 <div class="col-sm-5 form-group">
                     <label for="name" class="fw-bold">Name</label>
-                    <input type="text" id="name" class="form-control" #ingredientName>
+                    <input type="text" id="name" class="form-control" #nameInput>
                 </div>
                 <div class="col-sm-2 form-group">
                     <label for="amount" class="fw-bold">Amount</label>
-                    <input type="number" id="amount" class="form-control" #ingredientAmount>
+                    <input type="number" id="amount" class="form-control" #amountInput>
                 </div>
             </div>
             <div class="row my-2">
                 <div class="col-xs-12">
-                    <button class="btn btn-success m-1" type="submit" (click)="onAddIngredient(ingredientName, ingredientAmount)">Add</button>
+                    <button class="btn btn-success m-1" type="submit" (click)="onAddIngredient()">Add</button>
                     <button class="btn btn-danger m-1" type="button">Delete</button>
                     <button class="btn btn-primary m-1" type="button">Clear</button>
                 </div>
