--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -14,8 +14,8 @@
       <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Manage Recipe <span class="caret"></span></button>
       <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
         <li><a class="dropdown-item" (click)="onAddToShoppingList()" style="cursor:pointer;">To Shopping List</a></li>
-        <li><a class="dropdown-item">Edit Recipe</a></li>
-        <li><a class="dropdown-item">Delete Recipe</a></li>
+        <li><a class="dropdown-item" style="cursor:pointer;">Edit Recipe</a></li>
+        <li><a class="dropdown-item" style="cursor:pointer;">Delete Recipe</a></li>
       </ul>
     </div>
   </div>
