--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,9 +1,9 @@
-<a class="recipe-item list-group-item list-group-item-action d-flex justify-content-between" (click)="onSelected()">
-    <div class="pull-left">
-        <h4 class="list-group-item-text">{{recipeItem.name}}</h4>
-        <p class="list-group-item-text">{{recipeItem.description}}</p>
-    </div>
-    <span class="pull-right">
-        <img src={{recipeItem.imagePath}} alt={{recipeItem.name}} class="img-responsive rounded-4" style="max-height: 100px;">
-    </span>
+<a class="recipe-item list-group-item list-group-item-action d-flex justify-content-between rounded-2" [routerLink]="[index]" routerLinkActive="active">
+  <div class="pull-left">
+    <h4 class="list-group-item-text">{{recipeItem.name}}</h4>
+    <p class="list-group-item-text">{{recipeItem.description}}</p>
+  </div>
+  <span class="pull-right">
+    <img src={{recipeItem.imagePath}} alt={{recipeItem.name}} class="img-responsive rounded-4" style="max-height: 100px;">
+  </span>
 </a>
