--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,11 +1,11 @@
 <div class="row">
-    <div class="col-xs-12">
-        <button class="btn btn-success">New Recipe</button>
-    </div>
+  <div class="col-xs-12">
+    <button class="btn btn-success" (click)="onNewRecipe()">New Recipe</button>
+  </div>
 </div>
-<hr/>
+<hr />
 <div class="row">
-    <div class="col-xs-12 list-group">
-        <app-recipe-item  *ngFor="let recipe of recipes" [recipe-item]="recipe"></app-recipe-item>
-    </div>
+  <div class="col-xs-12 list-group">
+    <app-recipe-item *ngFor="let recipe of recipes; let i = index" [recipe-item]="recipe" [index]="i"></app-recipe-item>
+  </div>
 </div>
