--- a/src/app/recipes/recipes-edit/recipes-edit.component.html
+++ b/src/app/recipes/recipes-edit/recipes-edit.component.html
@@ -1,9 +1,9 @@
 <div class="row">
   <div class="col-12">
-    <form [formGroup]="recipeForm">
+    <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
       <div class="row">
         <div class="d-flex gap-2 col-12">
-          <button type="submit" class="btn btn-success">Save</button>
+          <button type="submit" class="btn btn-success" [disabled]="!recipeForm.valid">Save</button>
           <button type="button" class="btn btn-danger">Cancel</button>
         </div>
       </div>
@@ -37,16 +37,20 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-12">
+        <div class="col-12" formArrayName="ingredients">
           <div class="row"
+               *ngFor="let ingredientCtrl of controls; let i=index"
+               [formGroupName]="i"
                style="margin-top: 10px;">
             <div class="col-8">
               <input type="text"
-                     class="form-control">
+                     class="form-control"
+                     formControlName="name">
             </div>
             <div class="col-2">
               <input type="number"
-                     class="form-control">
+                     class="form-control"
+                     formControlName="amount">
             </div>
             <div class="col-2">
               <button type="button" class="btn btn-danger">X</button>
@@ -55,7 +59,7 @@
           <hr>
           <div class="row">
             <div class="col-12">
-              <button type="button" class="btn btn-success"> Add Ingredient </button>
+              <button type="button" class="btn btn-success" (click)="onAddNewIngredient()"> Add Ingredient </button>
             </div>
           </div>
         </div>
