--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -15,7 +15,7 @@
       <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
         <li><a class="dropdown-item" (click)="onAddToShoppingList()" style="cursor:pointer;">To Shopping List</a></li>
         <li><a class="dropdown-item" (click)="onEditRecipe()" style="cursor:pointer;">Edit Recipe</a></li>
-        <li><a class="dropdown-item" style="cursor:pointer;">Delete Recipe</a></li>
+        <li><a class="dropdown-item" (click)="onDeleteRecipe()" style="cursor:pointer;">Delete Recipe</a></li>
       </ul>
     </div>
   </div>
