--- a/src/app/recipes/recipes-edit/recipes-edit.component.html
+++ b/src/app/recipes/recipes-edit/recipes-edit.component.html
@@ -4,7 +4,7 @@
       <div class="row">
         <div class="d-flex gap-2 col-12">
           <button type="submit" class="btn btn-success" [disabled]="!recipeForm.valid">Save</button>
-          <button type="button" class="btn btn-danger">Cancel</button>
+          <button type="button" class="btn btn-danger" (click)="onCancel()">Cancel</button>
         </div>
       </div>
       <div class="row">
@@ -53,7 +53,7 @@
                      formControlName="amount">
             </div>
             <div class="col-2">
-              <button type="button" class="btn btn-danger">X</button>
+              <button type="button" class="btn btn-danger" (click)="onDeleteIngredientForm(i)">X</button>
             </div>
           </div>
           <hr>
