--- a/src/app/header/app.header.html
+++ b/src/app/header/app.header.html
@@ -15,8 +15,8 @@
     <div class="btn-group">
       <button class="btn btn-dark dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Manage Data<span class="caret"></span></button>
       <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-        <li><a class="dropdown-item" style="cursor:pointer;">Save Data</a></li>
-        <li><a class="dropdown-item" style="cursor:pointer;">Fetch Data</a></li>
+        <li><a class="dropdown-item" style="cursor:pointer;" (click)="onSaveData()">Save Data</a></li>
+        <li><a class="dropdown-item" style="cursor:pointer;" (click)="onFetchData()">Fetch Data</a></li>
       </ul>
     </div>
   </div>
