--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -22,8 +22,8 @@
                minlength="6" />
       </div>
       <div>
-        <button class="btn btn-primary" type="submit" [disabled]="!authForm.valid">Login</button> |
-        <button class="btn btn-primary" type="button">Switch to Login</button>
+        <button class="btn btn-primary" type="submit" [disabled]="!authForm.valid">{{isLogin ? 'Login':'Signup'}}</button> |
+        <button class="btn btn-primary" type="button" (click)="onSwitchMode()">Switch to {{isLogin ? 'Signup':'Login'}}</button>
       </div>
     </form>
   </div>
