--- a/src/app/header/app.header.html
+++ b/src/app/header/app.header.html
@@ -14,7 +14,7 @@
     </ul>
     <a class="nav-link" routerLink="/auth" *ngIf="!isAuthenticated" style="cursor:pointer;">Login|Signup</a>
     <div class="d-flex gap-4 align-items-center" *ngIf="isAuthenticated">
-      <a style="cursor:pointer;">Logout</a>
+      <a style="cursor:pointer;" (click)="logout()">Logout</a>
       <div class="btn-group">
         <button class="btn btn-dark dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Manage Data<span class="caret"></span></button>
         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
